# cloud-prices

./: .gitignore  README.md  azure.py  database.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: test.sqlite
frontend/src/: App.vue  Database.ts  style.css
frontend/src/types/: types.ts
