[tool.poetry]
name = "cloud-prices"
version = "0.1.0"
description = ""
authors = ["DanielHabenicht <daniel-habenicht@outlook.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.4.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
